# fgum

./: .gitignore  Makefile  README.md
bp_data/: README.md  de.sh  de_results.txt  generate_bp_table.py
bp_data/.ipynb_checkpoints/: dqi_bp_table-checkpoint.ipynb
fgum_data/: README.md  generate_fgum_table.py
qaoa_data/: README.md  qaoa_angles_for_verifier.csv
qaoa_verifier/: Project.toml  README.md  verify.jl
qaoa_verifier/src/: QaoaVerifier.jl
qaoa_verifier/test/: runtests.jl
qaoa_verifier_cpp/: Makefile  README.md
qaoa_verifier_cpp/cpp/: CMakeLists.txt  contract.cpp  contract.h  exports.cpp  verify.cpp
sa_data/: README.md  generate_sa_jobs.py  generate_sa_table.py  instance_3_4_840.tsv  instance_3_5_840.tsv  instance_3_6_840.tsv  instance_3_7_840.tsv  instance_3_8_840.tsv  instance_4_5_630.tsv  instance_4_6_630.tsv  instance_4_7_630.tsv  instance_4_8_630.tsv  instance_5_6_504.tsv  instance_5_7_504.tsv  instance_5_8_504.tsv  instance_6_7_420.tsv  instance_6_8_420.tsv  instance_7_8_360.tsv  sa_jobs.txt  summary.txt
sa_data/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  best_ratio-checkpoint.ipynb
src/: bitmatrix.cpp  bitmatrix.hpp  density.cpp  density_evolution.cpp  density_evolution.hpp  distribution.hpp  full_anneal.cpp  matrix_ensembles.cpp  matrix_ensembles.hpp  random_regular.cpp  test_xortools.cpp  utils.cpp  utils.hpp  xoropt.cpp  xoropt.hpp
